# Magalia1

./:  --date=format  .gitignore  CONTEXTE_DIAGNOSTIC.md  DIAGNOSTIC_RIBBON.md  PLAN_VERSIONING.md  README.md  TESTING.md  bjects -vH  hort 7c22290  how 7c22290 --format=-h -ad -s --date=format-Y--m--d -H-M-S --no-patch  package-lock.json  sistant assistant@essential-travel.ai -m fix(modals) corrections across service modals  tatus
backend/: export_word_quote_50.docx  main.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 20251115_095925_add_source_to_service_images.py  206782af2af6_add_quote_metadata_fields.py  5e54260b39c6_add_quote_versions_table.py  69b9b9828eee_add_user_and_login_token_tables.py  6c413360c810_add_itinerary_events_table.py  727ecce51389_quote_core_schema.py  7426b0c8e996_add_quote_header_fields.py  78004edfbc6c_add_timestamp_to_audit_logs.py  7cc8b7347c27_add_destination_photos.py  8df1afd8de02_add_stg_itinerary_events_table.py  9be4229d8ba2_initial_migration.py  a33f38c76a7d_destinations_audit_logs_tables.py  d85d0ee84c91_cost_fields_on_quotes_and_lines.py  f9496fcacb84_add_stg_images_table.py  fe58fce715ac_add_service_popularity_table.py
backend/src/: config.py  db.py  main.py  models_audit.py  models_geo.py  models_quote.py
backend/src/api/: auth.py  destinations.py  quotes.py  schemas_geo.py  schemas_quote.py  schemas_services.py  services.py
backend/src/auth/: __init__.py  email.py  (+1 more)
backend/tests/: README.md  conftest.py  test_destinations.py  test_health.py  test_quotes.py
(+100 files in other folders)
